# ai-dev-team-core

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  conftest.py  init.py  pyproject.toml  run_dev_team.py  start.bat
.ai-team/: ARCHITECTURE.md
.ai-team/agents/: __init__.py  base.py  discovery.py  registry.py  roles.py
.ai-team/context/: README.md  adapters.yaml  policy.yaml
.ai-team/framework/: AGENTS.md  clean-code.md  init-metadata.json  skills.md
.ai-team/runtime/: README.md
.ai-team/state/: __init__.py  factory.py  store.py
.ai-team/team_orchestrator/: __init__.py  artifact_sync.py  artifact_templates.py  cli.py  conditions.py  context_status.py  copilot_models.py  engine.py  logger.py  memory_sync.py  paths.py  project_context.py  prompts.py  runtimes.py  versioning.py
.ai-team/tests/: conftest.py  test_agents.py  test_bootstrap_manifest.py  test_cli.py  test_context_profiles.py  test_copilot_role_models.py  test_init.py  test_memory_sync.py  test_native_agent_profiles.py  test_orchestrator_engine.py  test_project_artifacts.py  test_role_output_contracts.py  test_role_prompts.py  test_runtime_registry.py  test_state_layer.py  test_team_contract.py
.github/agents/: README.md  architect.agent.md  coordinator.agent.md  developer.agent.md  dod-reviewer.agent.md  explorer.agent.md  requirements-engineer.agent.md  reviewer.agent.md  scout.agent.md  tester.agent.md  (+1 more)
agents/: discovery.py  roles.py
docs/: README.md
framework/: AGENTS.md  skills.md
presentations/: ai-dev-team-core-in-depth.md
state/: factory.py  merge.py
team_orchestrator/: __init__.py  artifact_sync.py  backends.py  cli.py  context_builders.py  engine.py  execution.py  flow_loader.py  memory_sync.py  models.py  project_context.py  prompts.py  runtimes.py
tests/: test_agents.py  test_architect_agent.py  test_backend_registry.py  test_developer_agent.py  test_dod_reviewer_agent.py  test_execution_backends.py  test_explorer_agent.py  test_init.py  test_model_registry.py  test_native_agent_profiles.py  test_orchestrator_engine.py  test_project_artifacts.py  test_requirements_agent.py  test_reviewer_agent.py  test_role_executor.py  test_role_output_contracts.py  test_role_prompts.py  test_runtime_registry.py  test_scout_agent.py  test_team_contract.py  test_tester_agent.py  test_ux_ui_agent.py
(+152 files in other folders)
