[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-team-core"
version = "0.5.0"
description = "Model-agnostic AI dev team framework skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.1",
  "jsonschema>=4.23",
]

[project.scripts]
ai-dev-team-init = "init:main"

[tool.setuptools]
py-modules = ["init"]

[tool.setuptools.packages.find]
where = ["."]
include = ["framework*"]
namespaces = true
