[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-team-core"
version = "0.9.0"
description = "Model-agnostic AI dev team framework skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.0.0",
  "PyYAML>=6.0.1",
  "jsonschema>=4.23",
]

[project.scripts]
ai-dev-team-init = "init:main"
ai-dev-team-run = "team_orchestrator.cli:main"

[tool.setuptools]
py-modules = ["init"]

[tool.setuptools.packages.find]
where = ["."]
include = ["framework*", "agents*", "team_orchestrator*", "flows*", "state*"]
namespaces = true

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests", "framework/runtime/tests"]
norecursedirs = [
  ".git",
  "__pycache__",
  ".tmp*",
  "pytest-cache-files-*",
  "runtime-memory-*",
]
